# ICRA-RoboMaster-2020-Strategy

./: README.md  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  abstract__common__strategy_8h.html  abstract__common__strategy_8h.js  abstract__common__strategy_8h_source.html  annotated.html  annotated_dup.js  attack__and__survival_8h.html  attack__and__survival_8h.js  attack__and__survival_8h_source.html  attack__behavior_8h.html  attack__behavior_8h_source.html  back__boot__area__behavior_8h.html  back__boot__area__behavior_8h_source.html  behavior__node_8cpp.html  behavior__node_8cpp.js  behavior__node_8h.html  behavior__node_8h.js  behavior__node_8h_source.html  behavior__state_8h.html  behavior__state_8h.js  behavior__state_8h_source.html  behavior__test_8cpp.html  behavior__test_8cpp.js  behavior__test__node_8cpp.html  behavior__test__node_8cpp.js  behavior__test__node_8h.html  behavior__test__node_8h_source.html  behavior__tree_8h.html  behavior__tree_8h_source.html  blackboard_8cpp.html  blackboard_8h.html  blackboard_8h_source.html  blackboard__common_8h.html  blackboard__common_8h.js  blackboard__common_8h_source.html  blackboard__raw_8cpp.html  blackboard__raw_8h.html  blackboard__raw_8h_source.html  (+475 more)
roborts_decision/: CMakeLists.txt  README.md  behavior_test_node.cpp  behavior_test_node.h
roborts_decision/behavior_tree/: behavior_node.cpp  behavior_node.h  behavior_tree.h
roborts_decision/blackboard/: blackboard.cpp  blackboard.h  blackboard_common.h  blackboard_raw.cpp  blackboard_raw.h  enemy_robot.cpp  enemy_robot.h  field.cpp  field.h  my_robot.cpp  my_robot.h  prediction_system.cpp  prediction_system.h
roborts_decision/config/: chassis_executor.prototxt
roborts_decision/data/: defense_field.data
roborts_decision/decision/: attack_and_survival.h  tworoborts_chase.h  wait_for_enemy_supply_area.h
roborts_decision/dqn_decision/: dqn_decision_node.py  dqn_network.py  firefly_env.py  util.py
roborts_decision/dqn_decision/launch/: blue_start_dqn.launch  red_start_dqn.launch
roborts_decision/dqn_decision/openai_ros/: gazebo_connection.py  openai_ros_common.py  robot_gazebo_env.py  task_envs_list.py
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_control.cpp  gimbal_control.h  gimbal_executor.cpp  gimbal_executor.h
roborts_decision/proto/: controller.pb.cc  controller.pb.h  controller.proto  decision.pb.cc  decision.pb.h
roborts_decision/strategy/: abstract_common_strategy.h  strategy_execute.cpp  strategy_execute.h
roborts_decision/strategy/move_strategys/: captureBullets_move_strategy.cpp  captureBullets_move_strategy.h  captureEnemyBlood_move_strategy.cpp  captureEnemyBlood_move_strategy.h  captureHomeBlood_move_strategy.cpp  captureHomeBlood_move_strategy.h  explore_move_strategy.cpp  explore_move_strategy.h  keepDirection_attack_move_strategy.cpp  keepDirection_attack_move_strategy.h  keepDirection_defense_move_strategy.cpp  keepDirection_defense_move_strategy.h  stop_move_strategy.cpp  stop_move_strategy.h
roborts_decision/strategy/shoot_strategys/: stop_shoot_strategy.cpp  stop_shoot_strategy.h  toBetterOpp_shoot_strategy.cpp  toBetterOpp_shoot_strategy.h  toWorseOpp_shoot_strategy.cpp  toWorseOpp_shoot_strategy.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+120 more)
